lab1/Test/L1-A-12-56.output
Error Type B at Line 14
Error Type A at Line 21
Error Type B at Line 44
Error Type A at Line 46
Error Type B at Line 47
