lab1/Test/L1-A-12-56.cmm
struct WW ;
int pavMIL4 [ 956154676 ] , d2mwnWwopeKGtUKx 

;
float Xxrrmfe8Obey6S ( ) {
  return ggf4sN4j8JXexM || vRaU8_ksRp <= v5sb3QEZAVEuOBjOJF9I 
    [ swwaP = dWDyyJ7lNENmQSBkp && AXtW != BMTrwnxTG9Yb9y2 
    + _7C6zD1M2GnMaFPcB6i ( CgfDc1M7 == ZNjx1s6TsQ3d6oCRTLS 
    - pgouptziz4 / RqXYaPIj4VM7mCXwsU ( pj27NX37JR3M84DK 
    , F8_GHWKhdRWoa3J0Lyy || pxRedgO && EVrmS8 < Mhdx 
    / ( IeHHwo6jAuXCeHogF = ! ! c [ m || GinJXxez3NpY1J3ua 
    >= t1Sm92h_kvwGvIepr + To0ZU0VAfGtF / - - ( oncEWXgeT8LOna 
    || dv_29uWJ16 && Y2IwmKYol > zhTtsFjkS2C0 ) * CJ ] 
    + - ! - 413027844 . ut0DEoZBz ) ) / . AlKuItXJpcN9Noz 
    ) * xhvlHwp0nzd ] / ! - uSGShR ( ) ;
}
struct ze8ozrlD9ZXcwhZ0JAZ0 PAbawr0ij2YXsS5HZs 
;
struct {
  int FSwNA ;
  int N7E0RO73LXpRQb4ce , RQdBneECQE0k3 `= znYsSN_6ios 
    ;
  int Gin8Dp ;
}I1cYZdm5B 
;
int ;
struct AWeuTNAfzyQA7qEHJ {
};
int ;
int g4U6KEdpOAIbzCcU ( ) {
}
int XhP7V1v ( int wCbNOR , int iAHmv_WD9dvG6Eo1RN3 
  ) {
}
int iQhNmWYXeGn ( ) {
}
int UUVOM2xXl ( ) {
}
int ;
int ;
int ;
int ;
int 
int s4bvEGUMnGpR1d ( ) {
  if ( NqK9WcgM1f )   NHkrlogPXMs4l ;
else   if ( ao0BlSXbSrG ) &  i8jLaqxu1 ;
else   if pOtee14Kf )   while ( rfl6qsAqc )   if ( 
    VZyUBLhwD9CU )   jJzd9FuDgFmnzd3q ;
else {
  }




}
int A1W ( ) {
  if ( c )   eH58gkrP_NwZx_lGV2x ;

}
